@@ -563,11 +563,13 @@ void context_manager::save_map_as_dialog()
 		input_name = default_dir_ + "/maps";
 	}
 	const std::string old_input_name = input_name;
-
+	std::string untitled_str = _("Untitled");
+	untitled_str += ".map";
+	
 	int overwrite_res = 1;
 	do {
 		input_name = old_input_name;
-		int res = dialogs::show_file_chooser_dialog_save(gui_, input_name, _("Save the Map As"));
+		int res = dialogs::show_file_chooser_dialog_save(gui_, input_name, _("Save the Map As"), untitled_str);
 		if (res == 0) {
 			if (file_exists(input_name)) {
 				res = gui2::show_message(gui_.video(), "",
@@ -591,11 +593,13 @@ void context_manager::save_scenario_as_dialog()
 		input_name = default_dir_ + "/scenarios";
 	}
 	const std::string old_input_name = input_name;
+	std::string untitled_str = _("Untitled");
+	untitled_str += ".scenario";
 
 	int overwrite_res = 1;
 	do {
 		input_name = old_input_name;
-		int res = dialogs::show_file_chooser_dialog_save(gui_, input_name, _("Save the Scenario As"));
+		int res = dialogs::show_file_chooser_dialog_save(gui_, input_name, _("Save the Scenario As"), untitled_str);
 		if (res == 0) {
 			if (file_exists(input_name)) {
 				res = gui2::show_message(gui_.video(), "",
