@@ -29,7 +29,7 @@ namespace dialogs
 
 class file_dialog : public gui::dialog {
 public:
-	file_dialog(display &disp, const std::string& file_path, const std::string& title, bool show_directory_buttons);
+	file_dialog(display &disp, const std::string& file_path, const std::string& title, const std::string& default_file_name, bool show_directory_buttons);
 
 	virtual gui::dialog::dimension_measurements layout(int xloc=-1, int yloc=-1);
 
@@ -52,6 +52,7 @@ private:
 	int last_selection_;
 	std::string last_textbox_text_;
 	std::string chosen_file_;
+	std::string default_file_name_;
     bool autocomplete_;
 };
 
@@ -68,7 +69,9 @@ int show_file_chooser_dialog(display &displ, std::string &filename,
 /// Show a filechooser dialog in a "save" mode, that is, without relying
 /// on autocomplete to allow saving under any filename
 int show_file_chooser_dialog_save(display &displ, std::string &filename,
-                             std::string const &title, bool show_directory_buttons = true,
+                             std::string const &title,
+                             const std::string& default_file_name = "",
+                             bool show_directory_buttons = true,
 							 const std::string& file_to_search = "",
 							 int xloc = -1, int yloc = -1);
 } // end of dialogs namespace
