@@ -11,6 +11,7 @@ Version 1.11.9+dev:
    * Updated translations:
  * Miscellaneous and bug fixes:
    * Fixed: A compilation warning with DEBUG_WINDOW_LAYOUT_GRAPHS.
+   * Add translatable default filename to map editor save dialog box
 
 Version 1.11.9:
  * Add-ons client:
